dev/eks_plugins/k8_autoscaler_multi_asg.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-autoscaler
  namespace: kube-system
  labels:
    app: cluster-autoscaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-autoscaler
  template:
    metadata:
      labels:
        app: cluster-autoscaler
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: nodeType
                    operator: In
                    values:
                      - systemNode
      serviceAccountName: cluster-autoscaler
      containers:
        - image: eu.gcr.io/k8s-artifacts-prod/autoscaling/cluster-autoscaler:v1.15.6
          name: cluster-autoscaler
          resources:
            limits:
              cpu: 100m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 300Mi
          command:
            - ./cluster-autoscaler
            - --v=4
            - --stderrthreshold=info
            - --cloud-provider=aws
            - --skip-nodes-with-local-storage=false
            - --nodes=3:10:qa-k8-system-node-k8-worker
            - --nodes=7:18:qa-k8-k8-worker-1a
            - --nodes=7:18:qa-k8-k8-worker-1b
            - --nodes=7:18:qa-k8-k8-worker-1c
            - --skip-nodes-with-system-pods=false
            - --balance-similar-node-groups
          volumeMounts:
            - name: ssl-certs
              mountPath: /etc/kubernetes/pki/ca.crt
              readOnly: true
          imagePullPolicy: "Always"
      volumes:
        - name: ssl-certs
          hostPath:
            path: "/etc/kubernetes/pki/ca.crt"
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-autoscaler
  namespace: kube-system
  annotations:
      prometheus.io/scrape: "true"
  labels:
    name: cluster-autoscaler
    app: cluster-autoscaler
spec:
  ports:
    - port: 80
      targetPort: 8085
      protocol: TCP
  selector:
    app: cluster-autoscaler
  type: NodePort
