dev/eks_plugins/kubernetes-k8dash.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8dash-nginx
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/secure-backends: "false"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: k8dash-dev..example.co
    http:
      paths:
      - path: "/"
        backend:
          serviceName: "k8dash"
          servicePort: 80
